2018-03-18  Steven G. Kargl  <kargl@gcc.gnu.org>

PR fortran/77414
	* decl.c (get_proc_name):  Check for a subroutine re-defined in
	the contain portion of a subroutine.  Change language of existing
	error message to better describe the issue. While here fix whitespace
	issues.

2018-03-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/77414
	* gfortran.dg/pr77414.f90: New test.
	* gfortran.dg/internal_references_1.f90: Adjust error message.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258633 138bc75d-0d04-0410-961f-82ee72b054a4